--- a/cmake/projects/Boost/schemes/url_sha1_boost_library.cmake.in
+++ b/cmake/projects/Boost/schemes/url_sha1_boost_library.cmake.in
@@ -68,8 +68,26 @@ string(COMPARE EQUAL "@CMAKE_CXX_COMPILER_ID@" "Clang" compiler_is_clang)
 
 set(use_cmake_archiver TRUE)
 if("@ANDROID@")
-  set(toolset_name "gcc")
-  set(toolset_version "ndk")
+  if("@CMAKE_COMPILER_IS_GNUCXX@")
+    set(toolset_name "gcc")
+  elseif(compiler_is_clang)
+    set(toolset_name "clang")
+  endif()
+
+  string(COMPARE EQUAL "@CMAKE_ANDROID_ARCH@" "armeabi-v7a" is_arm)
+  string(COMPARE EQUAL "@CMAKE_ANDROID_ARCH@" "arm64-v8a" is_arm64)
+  string(COMPARE EQUAL "@CMAKE_ANDROID_ARCH@" "x86_64" is_x86_64)
+  string(COMPARE EQUAL "@CMAKE_ANDROID_ARCH@" "x86" is_x86)
+
+  if(is_arm)
+      set(toolset_version "arm")
+  elseif(is_arm64)
+      set(toolset_version "arm64")
+  elseif(is_x86_64)
+      set(toolset_version "x86_64")
+  elseif(is_x86)
+      set(toolset_version "x86")
+  endif()
 elseif("@APPLE@")
   set(toolset_name "darwin")
   set(toolset_version "")
@@ -394,10 +412,19 @@ if(CMAKE_EXE_LINKER_FLAGS)
 endif()
 
 if("@ANDROID@")
-  if("@CMAKE_ANDROID_ARCH@" MATCHES "^(arm|mips|x86)$")
+  string(COMPARE EQUAL "@CMAKE_ANDROID_ARCH@" "armeabi-v7a" is_arm)
+  string(COMPARE EQUAL "@CMAKE_ANDROID_ARCH@" "arm64-v8a" is_arm64)
+  string(COMPARE EQUAL "@CMAKE_ANDROID_ARCH@" "x86_64" is_x86_64)
+  string(COMPARE EQUAL "@CMAKE_ANDROID_ARCH@" "x86" is_x86)
+
+  if(is_x86 OR is_arm)
     list(APPEND build_opts "address-model=32")
-  else()
+  elseif(is_x64 OR is_arm64)
     list(APPEND build_opts "address-model=64")
+  endif()
+
+  if (is_arm OR is_arm64)
+    list(APPEND build_opts "architecture=arm")
   endif()
 elseif("@MSVC@")
   string(COMPARE EQUAL "@HUNTER_MSVC_ARCH_TARGET@" "x86" is_x86)
