--- a/cmake/projects/Boost/schemes/url_sha1_boost_library.cmake.in
+++ b/cmake/projects/Boost/schemes/url_sha1_boost_library.cmake.in
@@ -253,7 +253,7 @@ set(
     threading=multi
     ${variants}
     --layout=tagged
-    toolset=${toolset_full_name}
+    toolset=${toolset_name}
     "--user-config=${boost_user_jam}"
     --with-@HUNTER_PACKAGE_COMPONENT@
     --abbreviate-paths
